...
                    emit(smartPair(value, next))
                }
            },
            modifier = Modifier
                .fillMaxSize()
                .verticalScroll(verticalScroll)
                .semantics { contentDescription = "Python solution editor" }
                .onFocusChanged {
                    isFocused = it.isFocused
                    if (!it.isFocused && preferences.keymap == EditorKeymap.VIM) {
                        pendingDeleteLine = false
                        vimMode = VimMode.NORMAL
                    }
...
